some change in builder chapter

--- a/beapi.tex
+++ b/beapi.tex
@@ -6,10 +6,10 @@
 En adelante, se presenta la técnica desarrollada llamada BEAPI, que tiene como objetivo mejorar la generación exhaustiva acotada (BEG, por sus siglas en inglés, \emph{Bounded Exhaustive Generation}).  Discutiremos las principales ideas de nuestros enfoques para generar de manera eficiente un conjunto exhaustivo acotado de objetos realizando únicamente llamadas a la API de un módulo. Este capítulo está organizado de la siguiente manera: en la Sección \ref{sec:motivating-example}, se presenta un ejemplo que ilustra el problema que se aborda con la técnica propuesta, la cual se explica en la Sección \ref{sec:beapiIntro}. Luego, en las Secciones \ref{sec:scope}, \ref{sec:stateMatching} y \ref{sec:builders}, se describen las optimizaciones implementadas en BEAPI.
 
 
-\section[Motivation]{Motivación}
+\section[Motivación]{Motivación}
 \label{sec:motivating-example}
 
-Para motivar las dificultades de escribir especificaciones formales para la generación de estructuras exhaustiva acotadas,  considére el invariante de representación (conmunmente llamados \emph{repOK}) de la clase \emph{NodeCachingLinkedList} (NCL) de Apache, que se muestra en la Figura \ref{fig:NCL-repOK}. Este es un repOK del benchmarks \emph{ROOPS}. Los NCL se componen de una lista principal circular doblemente enlazada, utilizada para el almacenamiento de datos, y una caché de nodos previamente utilizados implementada como una lista enlazada simple. Los nodos eliminados de la lista principal se mueven a la caché, donde se guardan para su uso en el futuro. De esta manera, cuando se requiere un nodo para una operación de inserción, se reutiliza un nodo de la caché (si existe) en lugar de asignar un nuevo nodo. El objetivo es evitar la sobrecarga de recolección de basura para las aplicaciones que realizan una gran cantidad de inserciones y eliminaciones en la lista. El \emph{repOK} devuelve true si y solo si la estructura de entrada satisface las propiedades estructurales de NCL \cite{Liskov00}. Las líneas 1 a 20 verifican que la lista principal sea una lista circular doblemente enlazada con una cabeza ficticia; las líneas 21 a 33 verifican que la caché sea una lista enlazada simple terminada en nulo (y se verifica la consistencia de los campos de tamaño en el proceso). Se observa que repOK está escrito de la manera recomendada por los autores del enfoque de generación exhaustiva de BE, \textsf{Korat} \cite{Boyapati02}. Este devuelve False tan pronto como encuentra una violación de una propiedad prevista en la entrada actual. De lo contrario, devuelve Verdadero al final. Estos repOK permiten a \textsf{Korat} podar grandes porciones del espacio de búsqueda, lo que mejora en gran medida su eficiencia.
+Para motivar las dificultades de escribir especificaciones formales para la generación de estructuras exhaustiva acotadas,  considere el invariante de representación (comúnmente llamados \emph{repOK}) de la clase \emph{NodeCachingLinkedList} (NCL) de Apache, que se muestra en la Figura \ref{fig:NCL-repOK}. Este es un repOK del benchmarks \emph{ROOPS}. Los NCL se componen de una lista principal circular doblemente enlazada, utilizada para el almacenamiento de datos, y una caché de nodos previamente utilizados implementada como una lista enlazada simple. Los nodos eliminados de la lista principal se mueven a la caché, donde se guardan para su uso en el futuro. De esta manera, cuando se requiere un nodo para una operación de inserción, se reutiliza un nodo de la caché (si existe) en lugar de asignar un nuevo nodo. El objetivo es evitar la sobrecarga de recolección de basura para las aplicaciones que realizan una gran cantidad de inserciones y eliminaciones en la lista. El \emph{repOK} devuelve true si y solo si la estructura de entrada satisface las propiedades estructurales de NCL \cite{Liskov00}. Las líneas 1 a 20 verifican que la lista principal sea una lista circular doblemente enlazada con una cabeza ficticia; las líneas 21 a 33 verifican que la caché sea una lista enlazada simple terminada en nulo (y se verifica la consistencia de los campos de tamaño en el proceso). Se observa que repOK está escrito de la manera recomendada por los autores del enfoque de generación exhaustiva de BE, \textsf{Korat} \cite{Boyapati02}. Este devuelve False tan pronto como encuentra una violación de una propiedad prevista en la entrada actual. De lo contrario, devuelve Verdadero al final. Estos repOK permiten a \textsf{Korat} podar grandes porciones del espacio de búsqueda, lo que mejora en gran medida su eficiencia.
 
 
 \begin{figure}[!thb]
