--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 \input{classicthesis-config}
 
 \usepackage{titletoc}
+\renewcommand{\lstlistingname}{Figure}% Listing -> Figure
 
  % Add new own commands
 \newcommand{\cacho}{\textcolor{red}}
