Some change in intro Builders

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -939,6 +939,23 @@ keywords = {metamorphic relation, test case generation, Metamorphic testing, ora
   timestamp = {Wed, 16 Oct 2019 14:14:55 +0200},
 }
 
+@book{jackson2006,
+  title={Software Abstractions - Logic, Language, and Analysis},
+  author={Jackson, Daniel},
+  year={2006},
+  publisher={MIT Press}
+}
+
+@inproceedings{frias2005dynalloy,
+  title={Dynalloy: upgrading alloy with actions},
+  author={Frias, Marcelo F and Galeotti, Juan P and Lopez Pombo, Carlos and Aguirre, Nazareno},
+  booktitle={27th International Conference on Software Engineering (ICSE 2005)},
+  editor={Roman, Gruia-Catalin and Griswold, William G and Nuseibeh, Bashar},
+  pages={442--451},
+  year={2005},
+  organization={ACM}
+}
+
 @InProceedings{Iosif02,
   author    = {Radu Iosif},
   title     = {Symmetry Reduction Criteria for Software Model Checking},
